--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 *.so
 *.dylib
 
+# GoLand
+.idea/*
+
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
