--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
-/.github            export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
+/.github        export-ignore
+/.gitattributes export-ignore
+/.gitignore     export-ignore
+/example.gif    export-ignore
+/app.json       export-ignore
