--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,8 @@
+/.idea          export-ignore
 /.github        export-ignore
 /.gitattributes export-ignore
 /.gitignore     export-ignore
 /example.gif    export-ignore
 /app.json       export-ignore
+/LICENSE        export-ignore
+/README.md      export-ignore
