--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
           go-version: 1.19
 
       - name: Run test coverage
-        run: go test -race -coverprofile=coverage.txt -covermode=atomic ./cmd/
+        run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
       - name: 'Upload to Codecov'
         uses: codecov/codecov-action@v3
